fixed centering for website on safari

--- a/app/css/crmAPIDocs.css
+++ b/app/css/crmAPIDocs.css
@@ -67,6 +67,7 @@ paper-toolbar .title {
 	display: flex;
 	flex-direction:row;
 	justify-content:center;
+	-webkit-justify-content: center;
 }
 
 	.content.extension {
